--- a/standard-integration/public/index.html
+++ b/standard-integration/public/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <!-- Replace "test" with your own sandbox Business account app client ID -->
-    <script src="https://www.paypal.com/sdk/js?client-id=test&currency=USD"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=ASERR9FOMtauhq4po-724CIzOZY-g8ljp5qZx7dqpvKMibsFuVHRgbmBx-0x2Ux3yudCS9fSNYtUvSXw&currency=USD"></script>
     <!-- Set up a container element for the button -->
     <div id="paypal-button-container"></div>
     <script>
